# whatsapplication

./: .env  .env.example  .gitignore  README.md  pyproject.toml  server.py
app/: config.py  db.py  dependencies.py  main.py
app/api/: webhooks.py
app/models/: __init__.py  contact.py  dispatch.py  mixins.py
app/providers/: base.py  dispatcher.py  status_mapping.py  wireweb.py  zapi.py
app/schemas/: common.py  contact.py  dispatch.py  webhooks.py
app/services/: dispatch_service.py  status_service.py  status_transition.py
migrations/: env.py
migrations/versions/: 90c7c89f28a2_conformação_final.py
tests/: conftest.py  test_status_transition.py  test_status_update.py  test_webhook_zapi.py
