[project]
name = "whatsapplication"
version = "0.1.0"
description = "Aplicação de envio de mensagens via whastapp+z-api com fallback"
readme = "README.md"
requires-python = ">=3.13.3,<4.0.0"
authors = [{ name = "luiz_loon", email = "luiz_loon@yahoo.com.br" }]
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "taskipy",
    "ruff",
    "alembic>=1.17.2",
    "ipdb",
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "testcontainers[postgres]",
    "pytest-asyncio>=1.3.0",
]


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.coverage.run]
omit=['whatsapplication/settings.py',]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev whatsapplication/server.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=whatsapplication -vv'
post_test = 'coverage html'
