[project]
name = "whatsapplication"
version = "0.1.0"
description = "Aplicação de envio de mensagens via whastapp+z-api com fallback"
readme = "README.md"
requires-python = ">=3.13.3,<4.0.0"
authors = [{ name = "luiz_loon", email = "luiz_loon@yahoo.com.br" }]
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "taskipy",
    "ruff",
    "alembic>=1.17.2",
    "ipdb",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "aiosqlite>=0.22.1",
]


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev app/server.py'
pre_test='task lint'
test = 'pytest -s -x -vv'

[tool.pytest.ini_options]
pythonpath=["."]
asyncio_mode='auto'
filterwarnings = ["ignore::sqlalchemy.exc.SADeprecationWarning"]
